# bookgetx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_mac.sh  build_win.ps1
.github/workflows/: build-cross-platform.yml
src/: HashStore.cpp  HashStore.h  MainWindow.cpp  MainWindow.h  main.cpp
